Fix cart positioning on mobile

--- a/src/sass/partials/_cart.scss
+++ b/src/sass/partials/_cart.scss
@@ -167,7 +167,9 @@
 
 @media only screen and (max-width: 586px) {
   .cart {
-    @include center();
-    transform: translate(-50%, -10%);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%);
   }
 }
